2011-12-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-charset.c (flter_complete): Same as
	charset_convert().

	* gmime/gmime-utils.c (charset_convert): Make sure the output
	buffer is large enough when flushing the conversion descriptor.

2011-12-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime.c (g_mime_init): Don't initialize the crypto types
	unless crypto was enabled in the build.

2011-11-06  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.28

	* build/vs2008/gmime.vcproj: Bumped version.

2011-11-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime.c (g_mime_init): Oops, don't forget to register
	GMimeDataWrapper as well.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): Need to decode the content
	of the application/octet-stream part containing the encrypted
	payload as it may have a non-7bit Content-Transfer-Encoding.

2011-11-05  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.27

	* build/vs2008/gmime.vcproj: Bumped version.

2011-11-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime.c (g_mime_init): Register all GObject-based types to
	prevent race conditions in multi-threaded apps.

2011-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.26

	* build/vs2008/gmime.vcproj: Bumped version.

2011-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Don't skip validation of
	UTF-8 text.

2011-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Handle ERANGE the same as
	EILSEQ.

	* gmime/gmime-filter-charset.c (filter_filter): Handle ERANGE the
	same as EILSEQ.

	* gmime/gmime-charset.c (g_mime_charset_map_init): Improved logic
	for Win32 (and even Linux) systems. Don't rely on setlocale().

2011-06-15  Jeffrey Stedfast  <fejj@gnome.org>
